tests/errors/frame_exist_55/e1.src
.IPPcode21

DEFVAR TF@var
